--- a/LinesGPT.ipynb
+++ b/LinesGPT.ipynb
@@ -21,7 +21,7 @@
       "metadata": {
         "id": "ftOOozryrI-r"
       },
-      "execution_count": 40,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -37,25 +37,25 @@
           "height": 112
         },
         "id": "jmh_drPPrQlM",
-        "outputId": "e5397dfd-17e7-45f4-ba30-bd385a88d4d6"
+        "outputId": "3f78ed5c-0870-4b13-9fc3-8a0b444af7c2"
       },
-      "execution_count": 41,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "                              Car_ID             Day_time  \\\n",
-              "298   77403 (М947ОК67) Renault Logan  17.02.2025 07:01:52   \n",
-              "1112  77403 (М947ОК67) Renault Logan  17.02.2025 15:33:36   \n",
+              "2813  77403 (М947ОК67) Renault Logan  18.02.2025 13:51:48   \n",
+              "1760  77403 (М947ОК67) Renault Logan  17.02.2025 22:59:00   \n",
               "\n",
               "                 Сoordinates  Speed_gl Ignition  \n",
-              "298   55,771525°, 37,820541°         9        +  \n",
-              "1112   55,76693°, 37,830445°         0        -  "
+              "2813  55,757661°, 37,827241°        28        +  \n",
+              "1760   55,74506°, 37,813948°        19        +  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c4037e8d-c91d-4cd9-b000-a38d0922214f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ed1e2cd3-0dd0-48fc-b2f3-c92fd027d5d4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -83,20 +83,20 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>298</th>\n",
+              "      <th>2813</th>\n",
               "      <td>77403 (М947ОК67) Renault Logan</td>\n",
-              "      <td>17.02.2025 07:01:52</td>\n",
-              "      <td>55,771525°, 37,820541°</td>\n",
-              "      <td>9</td>\n",
+              "      <td>18.02.2025 13:51:48</td>\n",
+              "      <td>55,757661°, 37,827241°</td>\n",
+              "      <td>28</td>\n",
               "      <td>+</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1112</th>\n",
+              "      <th>1760</th>\n",
               "      <td>77403 (М947ОК67) Renault Logan</td>\n",
-              "      <td>17.02.2025 15:33:36</td>\n",
-              "      <td>55,76693°, 37,830445°</td>\n",
-              "      <td>0</td>\n",
-              "      <td>-</td>\n",
+              "      <td>17.02.2025 22:59:00</td>\n",
+              "      <td>55,74506°, 37,813948°</td>\n",
+              "      <td>19</td>\n",
+              "      <td>+</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -104,7 +104,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c4037e8d-c91d-4cd9-b000-a38d0922214f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ed1e2cd3-0dd0-48fc-b2f3-c92fd027d5d4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -156,12 +156,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c4037e8d-c91d-4cd9-b000-a38d0922214f button.colab-df-convert');\n",
+              "        document.querySelector('#df-ed1e2cd3-0dd0-48fc-b2f3-c92fd027d5d4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c4037e8d-c91d-4cd9-b000-a38d0922214f');\n",
+              "        const element = document.querySelector('#df-ed1e2cd3-0dd0-48fc-b2f3-c92fd027d5d4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -181,8 +181,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a96374dd-0881-4e76-b9ef-7adf1f1c30ec\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a96374dd-0881-4e76-b9ef-7adf1f1c30ec')\"\n",
+              "<div id=\"df-b8d20c82-75c0-4551-8c31-135b3a04bb7f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b8d20c82-75c0-4551-8c31-135b3a04bb7f')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -301,7 +301,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a96374dd-0881-4e76-b9ef-7adf1f1c30ec button');\n",
+              "        document.querySelector('#df-b8d20c82-75c0-4551-8c31-135b3a04bb7f button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -317,7 +317,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 54
         }
       ]
     },
@@ -330,7 +330,7 @@
         "df_trips.drop(['Сoordinates'], axis=1, inplace=True)\n",
         "\n",
         "# Convert 'Day_time' to datetime objects\n",
-        "df_trips['Day_time'] = pd.to_datetime(df_trips['Day_time'], errors='coerce')\n",
+        "df_trips['Day_time'] = pd.to_datetime(df_trips['Day_time'], format='%d.%m.%Y %H:%M:%S', errors='coerce')\n",
         "\n",
         "df_trips['Ignition'] = df_trips['Ignition'].str.replace('-', '0').str.replace('+', '1')\n",
         "\n",
@@ -341,36 +341,28 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 167
+          "height": 112
         },
         "id": "gUeNqpi3rY-s",
-        "outputId": "4b0e7a28-105f-4ad6-b80e-95060af95423"
+        "outputId": "de8302ce-9813-4757-cb8b-6406d6859cb6"
       },
-      "execution_count": 42,
+      "execution_count": 55,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-42-e867a29fb15c>:7: UserWarning: Parsing dates in %d.%m.%Y %H:%M:%S format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-            "  df_trips['Day_time'] = pd.to_datetime(df_trips['Day_time'], errors='coerce')\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "                              Car_ID            Day_time  Speed_gl Ignition  \\\n",
-              "3288  77403 (М947ОК67) Renault Logan 2025-02-18 18:55:57        17        1   \n",
-              "2131  77403 (М947ОК67) Renault Logan 2025-02-18 01:00:58        18        1   \n",
+              "1944  77403 (М947ОК67) Renault Logan 2025-02-17 23:46:22        77        1   \n",
+              "1068  77403 (М947ОК67) Renault Logan 2025-02-17 14:29:27        31        1   \n",
               "\n",
               "      Longitude   Latitude  \n",
-              "3288  55.751815  37.816978  \n",
-              "2131  55.757653  37.826908  "
+              "1944  55.730476  37.808621  \n",
+              "1068   55.74999  37.831951  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-30cf16c9-c1be-4159-9d31-52825170be18\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-25b2dae9-360b-48ae-ad0f-19525dc97822\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -399,22 +391,22 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>3288</th>\n",
+              "      <th>1944</th>\n",
               "      <td>77403 (М947ОК67) Renault Logan</td>\n",
-              "      <td>2025-02-18 18:55:57</td>\n",
-              "      <td>17</td>\n",
+              "      <td>2025-02-17 23:46:22</td>\n",
+              "      <td>77</td>\n",
               "      <td>1</td>\n",
-              "      <td>55.751815</td>\n",
-              "      <td>37.816978</td>\n",
+              "      <td>55.730476</td>\n",
+              "      <td>37.808621</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2131</th>\n",
+              "      <th>1068</th>\n",
               "      <td>77403 (М947ОК67) Renault Logan</td>\n",
-              "      <td>2025-02-18 01:00:58</td>\n",
-              "      <td>18</td>\n",
+              "      <td>2025-02-17 14:29:27</td>\n",
+              "      <td>31</td>\n",
               "      <td>1</td>\n",
-              "      <td>55.757653</td>\n",
-              "      <td>37.826908</td>\n",
+              "      <td>55.74999</td>\n",
+              "      <td>37.831951</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -422,7 +414,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-30cf16c9-c1be-4159-9d31-52825170be18')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-25b2dae9-360b-48ae-ad0f-19525dc97822')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -474,12 +466,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-30cf16c9-c1be-4159-9d31-52825170be18 button.colab-df-convert');\n",
+              "        document.querySelector('#df-25b2dae9-360b-48ae-ad0f-19525dc97822 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-30cf16c9-c1be-4159-9d31-52825170be18');\n",
+              "        const element = document.querySelector('#df-25b2dae9-360b-48ae-ad0f-19525dc97822');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -499,8 +491,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e4966ab3-3152-4169-9f34-32091a57d90a\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e4966ab3-3152-4169-9f34-32091a57d90a')\"\n",
+              "<div id=\"df-5e8b340e-3927-4fe4-b689-7e95efc483ad\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5e8b340e-3927-4fe4-b689-7e95efc483ad')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -619,7 +611,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e4966ab3-3152-4169-9f34-32091a57d90a button');\n",
+              "        document.querySelector('#df-5e8b340e-3927-4fe4-b689-7e95efc483ad button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -631,11 +623,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"df_trips\",\n  \"rows\": 2,\n  \"fields\": [\n    {\n      \"column\": \"Car_ID\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"77403 (\\u041c947\\u041e\\u041a67) Renault Logan\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Day_time\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": \"2025-02-18 01:00:58\",\n        \"max\": \"2025-02-18 18:55:57\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"2025-02-18 01:00:58\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Speed_gl\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0,\n        \"min\": 17,\n        \"max\": 18,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          18\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Ignition\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"1\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Longitude\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"55.757653\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Latitude\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"37.826908\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"df_trips\",\n  \"rows\": 2,\n  \"fields\": [\n    {\n      \"column\": \"Car_ID\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"77403 (\\u041c947\\u041e\\u041a67) Renault Logan\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Day_time\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": \"2025-02-17 14:29:27\",\n        \"max\": \"2025-02-17 23:46:22\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"2025-02-17 14:29:27\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Speed_gl\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 32,\n        \"min\": 31,\n        \"max\": 77,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          31\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Ignition\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"1\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Longitude\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"55.74999\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Latitude\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"37.831951\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 55
         }
       ]
     },
@@ -649,7 +641,7 @@
       "metadata": {
         "id": "feQ_yu3Pr0jM"
       },
-      "execution_count": 45,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -662,7 +654,7 @@
       "metadata": {
         "id": "B9gevWDfrQh7"
       },
-      "execution_count": 47,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -688,32 +680,18 @@
       "cell_type": "code",
       "source": [
         "# Добавляем buffer(0.0003) к выделенным полосам - примерно 30 метров\n",
-        "gdf_bus_lanes[\"geometry\"] = gdf_bus_lanes[\"geometry\"].buffer(0.0003)\n",
+        "gdf_bus_lanes = gdf_bus_lanes.to_crs(epsg=3857)  # Web Mercator (метры)\n",
+        "gdf_bus_lanes[\"geometry\"] = gdf_bus_lanes[\"geometry\"].buffer(30)  # 30 метров (0.0003 градусов ~ 30 м)\n",
+        "gdf_bus_lanes = gdf_bus_lanes.to_crs(epsg=4326)  # Возвращаем в исходную систему\n",
         "\n",
         "# Определяем пересечения с учетом buffer\n",
-        "df_trips[\"on_bus_lane\"] = df_trips.intersects(gdf_bus_lanes.unary_union)"
+        "df_trips[\"on_bus_lane\"] = df_trips.intersects(gdf_bus_lanes[\"geometry\"].union_all())"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7GjwzpGQuj47",
-        "outputId": "608d790d-5b3f-4a0b-c285-21e3e27b4a7b"
+        "id": "7GjwzpGQuj47"
       },
-      "execution_count": 48,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-48-67825f88346c>:2: UserWarning: Geometry is in a geographic CRS. Results from 'buffer' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
-            "\n",
-            "  gdf_bus_lanes[\"geometry\"] = gdf_bus_lanes[\"geometry\"].buffer(0.0003)\n",
-            "<ipython-input-48-67825f88346c>:5: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
-            "  df_trips[\"on_bus_lane\"] = df_trips.intersects(gdf_bus_lanes.unary_union)\n"
-          ]
-        }
-      ]
+      "execution_count": 62,
+      "outputs": []
     },
     {
       "cell_type": "code",
