--- a/LinesGPT.ipynb
+++ b/LinesGPT.ipynb
@@ -698,20 +698,20 @@
         "df_trips[\"next_lon\"] = df_trips.groupby('Car_ID')['Longitude'].shift(-1)\n",
         "df_trips[\"next_lat\"] = df_trips.groupby('Car_ID')['Latitude'].shift(-1)\n",
         "\n",
-        "# Вычисляем расстояние между последовательными точками\n",
+        "# Вычисляем расстояние между последовательными точками в км\n",
         "df_trips['distance'] = df_trips.apply(\n",
         "    lambda row: geodesic((row['Latitude'], row['Longitude']), (row[\"next_lat\"], row[\"next_lon\"])).meters / 1000\n",
         "    if pd.notnull(row[\"next_lat\"]) else None,\n",
         "    axis=1\n",
         ")\n",
         "\n",
-        "# Вычисляем время между последовательными точками\n",
+        "# Вычисляем время между последовательными точками, часов\n",
         "df_trips[\"time\"] = df_trips.apply(\n",
         "    lambda row: (row[\"next_time\"] - row['Day_time']).total_seconds() / 3600 if pd.notnull(row[\"next_time\"]) else None,\n",
         "    axis=1\n",
         ")\n",
         "\n",
-        "# Вычисляем сколрость между последовательными точками\n",
+        "# Вычисляем сколрость между последовательными точками км/ч\n",
         "df_trips[\"speed\"] = df_trips.apply(\n",
         "    lambda row: row[\"distance\"] / row[\"time\"] if pd.notnull(row[\"distance\"]) and row[\"time\"] not in [None, 0] else None,\n",
         "    axis=1\n",
@@ -1081,20 +1081,31 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Оценка скорости на выделенных полосах\n",
+        "avg_speed_bus_lane = 50\n",
+        "\n",
+        "# Оценка выигрыша во времени\n",
+        "df_trips['predicted_time'] = df_trips.apply(\n",
+        "    lambda row: min(row['time'], row['distance'] / avg_speed_bus_lane) if row[\"on_bus_lane\"] else row[\"distance\"] / row[\"speed\"],\n",
+        "    axis=1\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "anPFZIQoI_3P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "Zdg72Khy8r9Y"
       },
       "outputs": [],
       "source": [
-        "# Средняя скорость на выделенных полосах и вне их\n",
-        "avg_speed_bus_lane = 50  # Можно получить из данных общественного транспорта\n",
         "\n",
-        "# Оценка выигрыша во времени\n",
-        "df_trips['predicted_time'] = df_trips.apply(\n",
-        "    lambda row: row['distance'] / avg_speed_bus_lane if row[\"on_bus_lane\"] else row[\"distance\"] / row[\"speed\"],\n",
-        "    axis=1\n",
-        ")\n",
         "df_trips[\"time_saved\"] = df_trips[\"time\"] - df_trips[\"predicted_time\"]\n",
         "\n",
         "# Итоговый выигрыш во времени\n",
