--- a/LinesGPT.ipynb
+++ b/LinesGPT.ipynb
@@ -27,7 +27,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Assuming 'trips.xlsx' is uploaded to your Colab environment\n",
+        "# 'trips.xlsx' is uploaded to Colab environment\n",
         "df_trips = pd.read_excel('trips.xlsx', header=0)  # header=0 means the first row is the header\n",
         "df_trips.sample(2)"
       ],
@@ -1103,12 +1103,12 @@
         "df_trips.iloc[236:239]"
       ],
       "metadata": {
-        "id": "g6jBH1MyLFCN",
-        "outputId": "efb17796-a770-4d18-cebc-c3361bb109ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 319
-        }
+        },
+        "id": "g6jBH1MyLFCN",
+        "outputId": "efb17796-a770-4d18-cebc-c3361bb109ad"
       },
       "execution_count": 81,
       "outputs": [
